fix z-index

--- a/css/style.css
+++ b/css/style.css
@@ -631,7 +631,6 @@ img {
     color: #FF4450;
     font-size: 20px;
     font-weight: 700;
-    text-decoration-line: underline;
 }
 
 .result__footer {
